---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Text
    span:
      - 0
      - 9
    full_span:
      - 0
      - 9
  - type: Tag
    name: if
    name_span:
      - 12
      - 2
    arguments:
      - text: user.is_authenticated
        span:
          - 15
          - 21
    span:
      - 11
      - 26
    full_span:
      - 9
      - 30
  - type: Text
    span:
      - 39
      - 5
    full_span:
      - 39
      - 5
  - type: Variable
    var: user.name
    filters:
      - name: title
        span:
          - 57
          - 5
      - name: default
        arg:
          text: "'Guest'"
          span:
            - 71
            - 7
        span:
          - 63
          - 15
    span:
      - 46
      - 33
    full_span:
      - 44
      - 37
  - type: Text
    span:
      - 81
      - 5
    full_span:
      - 81
      - 5
  - type: Tag
    name: for
    name_span:
      - 89
      - 3
    arguments:
      - text: group
        span:
          - 93
          - 5
      - text: in
        span:
          - 99
          - 2
      - text: user.groups
        span:
          - 102
          - 11
    span:
      - 88
      - 26
    full_span:
      - 86
      - 30
  - type: Text
    span:
      - 116
      - 9
    full_span:
      - 116
      - 9
  - type: Tag
    name: if
    name_span:
      - 128
      - 2
    arguments:
      - text: forloop.first
        span:
          - 131
          - 13
    span:
      - 127
      - 18
    full_span:
      - 125
      - 22
  - type: Text
    span:
      - 147
      - 1
    full_span:
      - 147
      - 1
  - type: Tag
    name: endif
    name_span:
      - 151
      - 5
    arguments: []
    span:
      - 150
      - 7
    full_span:
      - 148
      - 11
  - type: Text
    span:
      - 159
      - 9
    full_span:
      - 159
      - 9
  - type: Variable
    var: group.name
    filters: []
    span:
      - 170
      - 12
    full_span:
      - 168
      - 16
  - type: Text
    span:
      - 184
      - 9
    full_span:
      - 184
      - 9
  - type: Tag
    name: if
    name_span:
      - 196
      - 2
    arguments:
      - text: not
        span:
          - 199
          - 3
      - text: forloop.last
        span:
          - 203
          - 12
    span:
      - 195
      - 21
    full_span:
      - 193
      - 25
  - type: Text
    span:
      - 218
      - 2
    full_span:
      - 218
      - 2
  - type: Tag
    name: endif
    name_span:
      - 223
      - 5
    arguments: []
    span:
      - 222
      - 7
    full_span:
      - 220
      - 11
  - type: Text
    span:
      - 231
      - 9
    full_span:
      - 231
      - 9
  - type: Tag
    name: if
    name_span:
      - 243
      - 2
    arguments:
      - text: forloop.last
        span:
          - 246
          - 12
    span:
      - 242
      - 17
    full_span:
      - 240
      - 21
  - type: Text
    span:
      - 261
      - 1
    full_span:
      - 261
      - 1
  - type: Tag
    name: endif
    name_span:
      - 265
      - 5
    arguments: []
    span:
      - 264
      - 7
    full_span:
      - 262
      - 11
  - type: Text
    span:
      - 273
      - 5
    full_span:
      - 273
      - 5
  - type: Tag
    name: empty
    name_span:
      - 281
      - 5
    arguments: []
    span:
      - 280
      - 7
    full_span:
      - 278
      - 11
  - type: Text
    span:
      - 289
      - 25
    full_span:
      - 289
      - 25
  - type: Tag
    name: endfor
    name_span:
      - 317
      - 6
    arguments: []
    span:
      - 316
      - 8
    full_span:
      - 314
      - 12
  - type: Text
    span:
      - 326
      - 1
    full_span:
      - 326
      - 1
  - type: Tag
    name: else
    name_span:
      - 330
      - 4
    arguments: []
    span:
      - 329
      - 6
    full_span:
      - 327
      - 10
  - type: Text
    span:
      - 337
      - 11
    full_span:
      - 337
      - 11
  - type: Tag
    name: endif
    name_span:
      - 351
      - 5
    arguments: []
    span:
      - 350
      - 7
    full_span:
      - 348
      - 11
  - type: Text
    span:
      - 359
      - 1
    full_span:
      - 359
      - 1
